# MAPIE-DataCraft

./: README.md  pyproject.toml  requirements.txt
notebooks/: cas_d_usage_regression.ipynb  regression-tutorial.ipynb  regression-use-case-correction.ipynb  regression-use-case.ipynb  regression_tutorial.ipynb  regression_tutorial_correction.ipynb  regression_use_case_correction.ipynb  tutoriel_regression.ipynb
